Added section 2 and 3

--- a/main.tex
+++ b/main.tex
@@ -182,16 +182,54 @@
 
 \section{Introduction}
 
-Digital games provide a challenging and diverse domain for artificial intelligence research, combining large state and action spaces with real-time decision making and highly dynamic environments. Over the past decades, games have served both as testbeds for novel AI techniques and as application domains in which theoretical methods must be adapted to practical constraints. Within this context, AI planning has emerged as a principled approach for generating goal-directed behavior, offering an alternative to purely reactive or scripted control architectures.
+Digital games provide a challenging and diverse domain for artificial intelligence research. Modern games combine large state and action spaces with real-time decision making, stochastic outcomes, and highly dynamic environments shaped by both system processes and human player behavior. As a result, games have long served both as experimental testbeds for AI research and as application domains in which theoretical methods must be adapted to strict performance and design constraints. Within this context, AI planning has emerged as a principled framework for generating goal-directed behavior, offering an alternative to purely reactive or heavily scripted control architectures \cite{hoang2005hierarchical}.
 
-Traditional game AI techniques such as finite state machines and behavior trees remain popular due to their simplicity and efficiency. However, these approaches often suffer from limited scalability and poor flexibility when confronted with complex or unforeseen situations. Planning-based approaches address these limitations by explicitly reasoning about actions, goals, and their consequences, allowing agents to generate and revise action sequences dynamically. As a result, planning has been applied to a wide range of game genres, from first-person shooters to large-scale strategy games.
+Traditional game AI techniques, such as finite state machines and behavior trees, remain widely used due to their simplicity, predictability, and low computational overhead. However, as game worlds and agent responsibilities grow in complexity, these approaches often struggle to scale. Authoring effort increases rapidly, behaviors become difficult to maintain, and agents exhibit limited flexibility when confronted with situations not explicitly anticipated during design. Planning-based approaches address these limitations by explicitly modeling goals, actions, and state transitions, enabling agents to reason about future consequences and to revise their behavior dynamically during execution \cite{kelly2007planning}. Consequently, planning techniques have been explored across a broad range of game genres, from fast-paced action games to large-scale strategy and simulation environments.
 
-Despite their conceptual appeal, planning techniques face significant challenges when deployed in games. Real-time constraints, frequent changes in the game state, and the need for designer control impose restrictions that differ substantially from those in classical planning benchmarks. To address these issues, researchers have explored a variety of planning paradigms tailored to games, including hierarchical symbolic planning, goal-oriented action planning, and search-based planning with abstraction.
+Despite their conceptual appeal, deploying planning techniques in games presents significant challenges. Classical planning formulations typically assume static environments, offline computation, and complete knowledge of the world state. In contrast, game environments are subject to frequent state changes, tight real-time constraints, and the need for designer oversight to ensure believable and controllable agent behavior. These factors have motivated the development of planning approaches specifically tailored to the demands of games, rather than direct applications of classical planners \cite{neufeld2017htn}.
 
-This paper presents a literature survey of planning approaches applied to games, focusing on representative methods that illustrate different design trade-offs. We first examine hierarchical task network planning as a means of encoding strategic knowledge and structuring complex behaviors. We then discuss goal-oriented action planning as a practical planning framework adopted in commercial game development. Finally, we review search-based planning approaches based on Monte Carlo Tree Search and state abstraction, which emphasize scalability and domain independence.
+One prominent line of work focuses on hierarchical planning, particularly Hierarchical Task Network (HTN) methods, which allow complex behaviors to be decomposed into structured subtasks while preserving designer-authored strategic knowledge. HTN-based approaches have proven effective in games that require long-term planning and coordination, while still supporting adaptation during execution. In parallel, Goal-Oriented Action Planning (GOAP) has been adopted in commercial game development as a more lightweight and flexible alternative to large finite state machines. By decoupling goals from actions and performing frequent replanning, GOAP enables agents to respond adaptively to changing world states, as demonstrated in commercial titles \cite{orkin2006three}.
 
-The goal of this survey is to provide a structured comparison of these approaches, highlighting their strengths, limitations, and suitability for different game settings. By synthesizing insights from both academic research and industry practice, we aim to clarify the role of planning in modern game AI and identify open challenges that motivate future work in this area.
+More recently, search-based planning approaches inspired by Monte Carlo Tree Search (MCTS) have been investigated as a means of handling large decision spaces with limited domain knowledge. These methods often rely on abstraction techniques to manage computational complexity, trading exact reasoning for scalable approximate planning. Such approaches are particularly relevant in strategy and simulation games, where exhaustive planning is infeasible and adaptability is crucial \cite{xu2022elastic}.
 
-% \bibliography{aaai25}
+% This paper presents a literature survey of planning approaches applied to games, focusing on representative methods that highlight different design trade-offs between expressiveness, computational cost, and designer control. We examine hierarchical task network planning, goal-oriented action planning, and search-based planning with abstraction, and compare their suitability across different game settings. By synthesizing insights from both academic research and industry practice, this survey aims to clarify the role of planning in modern game AI and to identify open challenges that motivate future work in this area.
+
+The remainder of this paper is organized as follows. Section~2 provides background on AI planning and discusses the challenges that arise when applying classical planning techniques to game environments. Section~3 reviews hierarchical planning approaches, with a particular focus on Hierarchical Task Networks and their use in encoding strategic knowledge for games. Section~4 examines Goal-Oriented Action Planning as a practical planning framework adopted in commercial game development. Section~5 surveys search-based planning approaches based on Monte Carlo Tree Search and state abstraction. Section~6 presents a comparative analysis of these paradigms, highlighting key trade-offs and design considerations. Finally, Section~7 discusses open challenges and future research directions, and Section~8 concludes the paper.
+
+
+\section{Background}
+
+AI planning is traditionally concerned with computing sequences of actions that transform an initial state of the world into a desired goal state. Classical planning formulations typically assume a discrete, fully observable, and deterministic environment, along with a static problem definition known in advance. Actions are specified through preconditions and effects, and planning is performed offline prior to execution. While this formulation has been highly successful in benchmark planning domains, its underlying assumptions rarely hold in interactive game environments.
+
+Games differ from classical planning benchmarks in several fundamental ways. First, game environments are highly dynamic: the world state can change continuously due to physics simulation, non-player characters, and human player input. Second, planning and execution are often tightly interleaved, as agents must react within strict real-time constraints. Third, games impose strong requirements on designer control and predictability, as agent behavior must remain interpretable, believable, and aligned with intended gameplay experiences. These characteristics make the direct application of classical planners impractical in most game settings \cite{kelly2007planning}.
+
+Historically, game AI has relied on reactive control architectures such as finite state machines and, more recently, behavior trees. These approaches offer deterministic execution, low computational cost, and ease of debugging, making them attractive in production environments. However, they encode behavior procedurally rather than declaratively, leading to limited flexibility and significant authoring overhead as complexity increases. As game worlds scale, such systems become increasingly difficult to maintain, and agents struggle to adapt to situations not explicitly anticipated during design.
+
+Planning-based approaches address these limitations by explicitly representing goals, actions, and world state, allowing agents to reason about future behavior rather than executing fixed control flows. In the context of games, planning is rarely performed as a single, offline computation. Instead, plans are often partial, continuously revised, or generated incrementally during execution. This shift from offline planning to online decision making represents a key adaptation of planning techniques to interactive environments \cite{neufeld2017htn}.
+
+Several planning paradigms have been adapted to meet the constraints of games. Hierarchical planning methods, particularly Hierarchical Task Networks (HTNs), introduce structured decompositions that allow designers to encode domain knowledge and high-level strategies while retaining flexibility at execution time. Goal-Oriented Action Planning (GOAP) adopts a flatter representation, emphasizing modular actions and frequent replanning to support reactive yet goal-driven behavior. Search-based approaches, including methods inspired by Monte Carlo Tree Search, treat planning as an online decision process, often relying on abstraction or sampling to cope with large state spaces \cite{xu2022elastic}.
+
+Across these paradigms, planning in games is best understood not as a replacement for reactive control, but as a complementary mechanism. Practical game AI systems often combine planning with scripting, heuristics, and domain-specific constraints to balance autonomy, performance, and designer intent. Understanding how different planning approaches navigate these trade-offs is essential for evaluating their suitability in real-world games and provides the foundation for the detailed analysis presented in the following sections.
+
+
+\section{Hierarchical Planning for Games}
+
+Hierarchical planning has been one of the most influential planning paradigms applied to games, primarily due to its ability to encode domain knowledge at multiple levels of abstraction. In contrast to flat planning representations, hierarchical approaches allow high-level objectives to be decomposed into increasingly concrete subtasks, providing both structural guidance and flexibility during execution. Among hierarchical methods, Hierarchical Task Network (HTN) planning has received particular attention in the context of game AI.
+
+In HTN planning, problems are specified in terms of tasks rather than explicit goal states. High-level, abstract tasks represent strategic objectives, which are recursively decomposed into primitive actions through the application of methods. This decomposition process enables designers to embed domain knowledge directly into the planning model, constraining the space of possible plans while preserving meaningful variation in agent behavior. Such properties are especially valuable in games, where fully autonomous planning may lead to undesirable or unintelligible outcomes.
+
+Early work by Hoang et al.\ demonstrated how HTN representations could be used to encode strategic knowledge for game agents, allowing plans generated in previous situations to be reused and adapted in new contexts \cite{hoang2005hierarchical}. By organizing behavior hierarchically, agents were able to reason at an appropriate level of abstraction while still producing concrete, executable action sequences. This approach reduced planning complexity and supported more consistent strategic behavior across gameplay scenarios.
+
+Subsequent work by Kelly et al.\ explored the integration of HTN planning into real-time video games, addressing practical constraints such as limited computation time and frequent changes in the game state \cite{kelly2007planning}. Rather than generating complete plans offline, their approach emphasized incremental planning and execution, allowing agents to interleave planning with action. This adaptation highlighted a key requirement for HTNs in games: the ability to suspend, revise, or abandon partial plans in response to unexpected events.
+
+The challenges of highly dynamic environments were further examined by Neufeld et al.\ in the context of \emph{HTN Fighter}, a planning system designed for fast-paced combat scenarios \cite{neufeld2017htn}. In this work, the authors demonstrated how frequent replanning could be achieved by limiting the depth of decomposition and by prioritizing reactive responses when necessary. Their results illustrate how hierarchical structure can coexist with real-time responsiveness, provided that planning decisions are carefully bounded and tightly coupled to execution.
+
+Across these systems, HTN planning in games is characterized by a deliberate trade-off between autonomy and control. Designers specify the space of allowable behaviors through task decompositions, ensuring that generated plans remain aligned with intended gameplay design. At the same time, agents retain the ability to adapt their behavior at runtime by selecting alternative methods or recomputing partial plans when conditions change. This balance makes HTNs particularly suitable for games that require long-term strategy, coordination among agents, or adherence to narrative and design constraints.
+
+Despite these advantages, HTN-based approaches also present limitations. Authoring hierarchical task models can be labor-intensive, and the quality of agent behavior depends heavily on the completeness and correctness of the provided domain knowledge. Moreover, overly restrictive hierarchies may reduce behavioral diversity, while overly permissive ones can undermine predictability. These considerations motivate the exploration of alternative planning paradigms that emphasize flexibility and reactivity, which are discussed in the following section.
+
+
+\bibliographystyle{aaai25}
+\bibliography{aaai25}
 
 \end{document}
