--- a/aaai25.bib
+++ b/aaai25.bib
@@ -1,111 +1,151 @@
+@inproceedings{hoang2005hierarchical,
+  title     = {Hierarchical Plan Representations for Encoding Strategic Game AI},
+  author    = {Hoang, Huy and Lee-Urban, Stephen and Mu{\~n}oz-Avila, Hector},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence and Interactive Digital Entertainment},
+  year      = {2005},
+  pages     = {63--68}
+}
+
+@inproceedings{kelly2007planning,
+  title     = {Planning with Hierarchical Task Networks in Video Games},
+  author    = {Kelly, John P. and Botea, Adi and Koenig, Sven},
+  booktitle = {Proceedings of the ICAPS Workshop on Planning in Games},
+  year      = {2007},
+  pages     = {18}
+}
+
+@inproceedings{neufeld2017htn,
+  title     = {HTN Fighter: Planning in a Highly-Dynamic Game},
+  author    = {Neufeld, Xavier and Mostaghim, Sanaz and Perez-Liebana, Diego},
+  booktitle = {Proceedings of the International Conference on Computer Science and Electronic Engineering},
+  year      = {2017},
+  pages     = {189--194}
+}
+
+@inproceedings{orkin2006three,
+  title     = {Three States and a Plan: The AI of F.E.A.R.},
+  author    = {Orkin, Jeff},
+  booktitle = {Proceedings of the Game Developers Conference},
+  year      = {2006}
+}
+
+@article{xu2022elastic,
+  title   = {Elastic Monte Carlo Tree Search with State Abstraction},
+  author  = {Xu, Zeyu and Wang, Rui and Perez-Liebana, Diego},
+  journal = {IEEE Transactions on Games},
+  year    = {2022}
+}
+
+
+
 @book{em:86,
-  editor  = "Engelmore, Robert and Morgan, Anthony",
-  title   = "Blackboard Systems",
-  year    = 1986,
-  address = "Reading, Mass.",
-  publisher = "Addison-Wesley",
+  editor    = {Engelmore, Robert and Morgan, Anthony},
+  title     = {Blackboard Systems},
+  year      = 1986,
+  address   = {Reading, Mass.},
+  publisher = {Addison-Wesley}
 }
 
 @inproceedings{c:83,
-  author  = "Clancey, William J.",
-  year    = 1983,
-  title   = "{Communication, Simulation, and Intelligent
-Agents: Implications of Personal Intelligent Machines
-for Medical Education}",
-  booktitle="Proceedings of the Eighth International Joint Conference on Artificial Intelligence {(IJCAI-83)}", 
-  pages   = "556-560",
-  address = "Menlo Park, Calif",
-  publisher = "{IJCAI Organization}",
+  author    = {Clancey, William J.},
+  year      = 1983,
+  title     = {{Communication, Simulation, and Intelligent
+               Agents: Implications of Personal Intelligent Machines
+               for Medical Education}},
+  booktitle = {Proceedings of the Eighth International Joint Conference on Artificial Intelligence {(IJCAI-83)}},
+  pages     = {556-560},
+  address   = {Menlo Park, Calif},
+  publisher = {{IJCAI Organization}}
 }
 @inproceedings{c:84,
-  author  = "Clancey, William J.",
-  year    = 1984,
-  title   = "{Classification Problem Solving}",
-  booktitle = "Proceedings of the Fourth National 
-              Conference on Artificial Intelligence",
-  pages   = "45-54",
-  address = "Menlo Park, Calif.",
-  publisher="AAAI Press",
+  author    = {Clancey, William J.},
+  year      = 1984,
+  title     = {{Classification Problem Solving}},
+  booktitle = {Proceedings of the Fourth National 
+               Conference on Artificial Intelligence},
+  pages     = {45-54},
+  address   = {Menlo Park, Calif.},
+  publisher = {AAAI Press}
 }
 @article{r:80,
-  author = {Robinson, Arthur L.},
-  title = {New Ways to Make Microcircuits Smaller},
-  volume = {208},
-  number = {4447},
-  pages = {1019--1022},
-  year = {1980},
-  doi = {10.1126/science.208.4447.1019},
+  author    = {Robinson, Arthur L.},
+  title     = {New Ways to Make Microcircuits Smaller},
+  volume    = {208},
+  number    = {4447},
+  pages     = {1019--1022},
+  year      = {1980},
+  doi       = {10.1126/science.208.4447.1019},
   publisher = {American Association for the Advancement of Science},
-  issn = {0036-8075},
-  URL = {https://science.sciencemag.org/content/208/4447/1019},
-  eprint = {https://science.sciencemag.org/content/208/4447/1019.full.pdf},
-  journal = {Science},
+  issn      = {0036-8075},
+  url       = {https://science.sciencemag.org/content/208/4447/1019},
+  eprint    = {https://science.sciencemag.org/content/208/4447/1019.full.pdf},
+  journal   = {Science}
 }
 @article{r:80x,
-  author  = "Robinson, Arthur L.",
+  author  = {Robinson, Arthur L.},
   year    = 1980,
-  title   = "{New Ways to Make Microcircuits Smaller---Duplicate Entry}",
-  journal = "Science",
-  volume  =  208,
-  pages   = "1019-1026",
+  title   = {{New Ways to Make Microcircuits Smaller---Duplicate Entry}},
+  journal = {Science},
+  volume  = 208,
+  pages   = {1019-1026}
 }
 @article{hcr:83,
-title = {Strategic explanations for a diagnostic consultation system},
-journal = {International Journal of Man-Machine Studies},
-volume = {20},
-number = {1},
-pages = {3-19},
-year = {1984},
-issn = {0020-7373},
-doi = {https://doi.org/10.1016/S0020-7373(84)80003-6},
-url = {https://www.sciencedirect.com/science/article/pii/S0020737384800036},
-author = {Diane Warner Hasling and William J. Clancey and Glenn Rennels},
-abstract = {This article examines the problem of automatte explanation of reasoning, especially as it relates to expert systems. By explanation we mean the ability of a program to discuss what it is doing in some understandable way. We first present a general framework in which to view explanation and review some of the research done in this area. We then focus on the explanation system for NEOMYCIN, a medical consultation program. A consultation program interactively helps a user to solve a problem. Our goal is to have NEOMYCIN explain its problem-solving strategies. An explanation of strategy describes the plan the program is using to reach a solution. Such an explanation is usually concrete, referring to aspects of the current problem situation. Abstract explanations articulate a general principle, which can be applied in different situations; such explanations are useful in teaching and in explaining by analogy. We describe the aspects of NEOMYCIN that make abstract strategic explanations possible—the representation of strategic knowledge explicitly and separately from domain knowledge— and demonstrate how this representation can be used to generate explanations.}
+  title    = {Strategic explanations for a diagnostic consultation system},
+  journal  = {International Journal of Man-Machine Studies},
+  volume   = {20},
+  number   = {1},
+  pages    = {3-19},
+  year     = {1984},
+  issn     = {0020-7373},
+  doi      = {https://doi.org/10.1016/S0020-7373(84)80003-6},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0020737384800036},
+  author   = {Diane Warner Hasling and William J. Clancey and Glenn Rennels},
+  abstract = {This article examines the problem of automatte explanation of reasoning, especially as it relates to expert systems. By explanation we mean the ability of a program to discuss what it is doing in some understandable way. We first present a general framework in which to view explanation and review some of the research done in this area. We then focus on the explanation system for NEOMYCIN, a medical consultation program. A consultation program interactively helps a user to solve a problem. Our goal is to have NEOMYCIN explain its problem-solving strategies. An explanation of strategy describes the plan the program is using to reach a solution. Such an explanation is usually concrete, referring to aspects of the current problem situation. Abstract explanations articulate a general principle, which can be applied in different situations; such explanations are useful in teaching and in explaining by analogy. We describe the aspects of NEOMYCIN that make abstract strategic explanations possible—the representation of strategic knowledge explicitly and separately from domain knowledge— and demonstrate how this representation can be used to generate explanations.}
 }
 @article{hcrt:83,
-  author  = "Hasling, Diane Warner and Clancey, William J. and Rennels, Glenn R. and Test, Thomas",
+  author  = {Hasling, Diane Warner and Clancey, William J. and Rennels, Glenn R. and Test, Thomas},
   year    = 1983,
-  title   = "{Strategic Explanations in Consultation---Duplicate}",
-  journal = "The International Journal of Man-Machine Studies",
+  title   = {{Strategic Explanations in Consultation---Duplicate}},
+  journal = {The International Journal of Man-Machine Studies},
   volume  = 20,
   number  = 1,
-  pages   = "3-19",
+  pages   = {3-19}
 }
 @techreport{r:86,
-  author  = "Rice, James",
-  year    = 1986,
-  title   = "{Poligon: A System for Parallel Problem Solving}",
-  type    = "Technical Report", 
-  number  = "KSL-86-19", 
-  institution = "Dept.\ of Computer Science, Stanford Univ.",
+  author      = {Rice, James},
+  year        = 1986,
+  title       = {{Poligon: A System for Parallel Problem Solving}},
+  type        = {Technical Report},
+  number      = {KSL-86-19},
+  institution = {Dept.\ of Computer Science, Stanford Univ.}
 }
 @phdthesis{c:79,
-  author  = "Clancey, William J.",
+  author  = {Clancey, William J.},
   year    = 1979,
-  title   = "{Transfer of Rule-Based Expertise
-through a Tutorial Dialogue}",
-  type    = "{Ph.D.} diss.",
-  school  = "Dept.\ of Computer Science, Stanford Univ.",
-  address = "Stanford, Calif.",
+  title   = {{Transfer of Rule-Based Expertise
+             through a Tutorial Dialogue}},
+  type    = {{Ph.D.} diss.},
+  school  = {Dept.\ of Computer Science, Stanford Univ.},
+  address = {Stanford, Calif.}
 }
 @unpublished{c:21,
-  author  = "Clancey, William J.",
-  title   = "{The Engineering of Qualitative Models}",
-  year    = 2021,
-  note    = "Forthcoming",
+  author = {Clancey, William J.},
+  title  = {{The Engineering of Qualitative Models}},
+  year   = 2021,
+  note   = {Forthcoming}
 }
 @misc{c:22,
-      title={Attention Is All You Need}, 
-      author={Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
-      year={2017},
-      eprint={1706.03762},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL}
+  title         = {Attention Is All You Need},
+  author        = {Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
+  year          = {2017},
+  eprint        = {1706.03762},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL}
 }
 @misc{c:23,
-  title        = "Pluto: The 'Other' Red Planet",
-  author       = "{NASA}",
-  howpublished = "\url{https://www.nasa.gov/nh/pluto-the-other-red-planet}",
+  title        = {Pluto: The 'Other' Red Planet},
+  author       = {{NASA}},
+  howpublished = {\url{https://www.nasa.gov/nh/pluto-the-other-red-planet}},
   year         = 2015,
-  note         = "Accessed: 2018-12-06"
+  note         = {Accessed: 2018-12-06}
 }
