Added 3 papers and a new image

--- a/aaai25.bib
+++ b/aaai25.bib
@@ -36,6 +36,37 @@
   year    = {2022}
 }
 
+@inproceedings{reuss2006casebased,
+  title     = {Case-Based Action Planning in a First Person Scenario Game},
+  author    = {Reuss, Sebastian and Meinel, Christoph},
+  booktitle = {Proceedings of the International Conference on Case-Based Reasoning},
+  year      = {2006}
+}
+
+@inproceedings{ontanon2007casebased,
+  title     = {Case-Based Planning and Execution for Real-Time Strategy Games},
+  author    = {Onta{\~n}{\'o}n, Santiago and Mishra, Karthik and Sugandh, Neha and Ram, Ashwin},
+  booktitle = {Proceedings of the International Conference on Case-Based Reasoning},
+  year      = {2007}
+}
+
+@article{chaslot2008mcts,
+  title   = {Monte-Carlo Tree Search: A New Framework for Game AI},
+  author  = {Chaslot, Guillaume and Bakkes, Sander and Szita, Istv{\'a}n and Spronck, Pieter},
+  journal = {Proceedings of the AAAI Conference on Artificial Intelligence and Interactive Digital Entertainment},
+  year    = {2008}
+}
+
+@article{schrittwieser2020mastering,
+  title   = {Mastering Atari, Go, Chess and Shogi by Planning with a Learned Model},
+  author  = {Schrittwieser, Julian and Antonoglou, Ioannis and Hubert, Thomas and Simonyan, Karen and Sifre, Laurent and Schmitt, Simon and Guez, Arthur and Lockhart, Edward and Hassabis, Demis and Graepel, Thore and others},
+  journal = {Nature},
+  volume  = {588},
+  number  = {7839},
+  pages   = {604--609},
+  year    = {2020}
+}
+
 
 
 @book{em:86,
