Restructured paper to account for deeper literature review and analysis

--- a/aaai25.bib
+++ b/aaai25.bib
@@ -180,3 +180,41 @@
   year         = 2015,
   note         = {Accessed: 2018-12-06}
 }
+
+@book{mark2009behavioral,
+  title     = {Behavioral Mathematics for Game AI},
+  author    = {Mark, Dave},
+  year      = {2009},
+  publisher = {Course Technology}
+}
+
+@article{wang2023voyager,
+  title   = {Voyager: An Open-Ended Embodied Agent with Large Language Models},
+  author  = {Wang, Guanzhi and others},
+  journal = {arXiv preprint arXiv:2305.16291},
+  year    = {2023}
+}
+
+@article{park2023generative,
+  title   = {Generative Agents: Interactive Simulacra of Human Behavior},
+  author  = {Park, Joon Sung and others},
+  journal = {Proceedings of the ACM on Human-Computer Interaction},
+  year    = {2023}
+}
+
+@article{laird2001human,
+  title   = {Human-level AI's killer application: Interactive computer games},
+  author  = {Laird, John E and van Lent, Michael},
+  journal = {AI Magazine},
+  volume  = {22},
+  number  = {2},
+  pages   = {15--25},
+  year    = {2001}
+}
+
+@book{yannakakis2018games,
+  title     = {Artificial Intelligence and Games},
+  author    = {Yannakakis, Georgios N and Togelius, Julian},
+  year      = {2018},
+  publisher = {Springer}
+}
